short term measures now dynamic

--- a/website/templates/sideElement.html
+++ b/website/templates/sideElement.html
@@ -12,8 +12,7 @@
     <h3 style="color: #555;">Suggested Measures</h3>
     <h4 style="color: #666;">Short-Term:</h4>
     <ul style="margin-left: 20px;">
-        <li>Vulnerable groups should stay indoors.</li>
-        <li>Public cooling stations activated in hotspots.</li>
+        <li>{{st_measures}}</li>
     </ul>
 
     <h4 style="color: #666;">Long-Term:</h4>
