--- a/website/templates/frontpage.html
+++ b/website/templates/frontpage.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caprasimo&family=Rozha+One&family=Yeseva+One&display=swap"
         rel="stylesheet">
 
-    <title>Urban Heat Island Solution: HEATTROPOLIS</title>
+    <title>Heattropolis</title>
     <style>
         * {
             margin: 0;
@@ -18,7 +18,7 @@
 
         body {
             background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-                url('../../images/munichHotWeather.png') center/cover fixed;
+                url('/static/images/munichHotWeather.png') center/cover fixed;
             color: white;
             font-family: 'Source Sans Pro', sans-serif;
             line-height: 1.6;
@@ -349,7 +349,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="../../images/munichHotWeather.png" background-repeat="no-repeat" background-size="cover"
+            <img src="/static/images/munichHotWeather.png" background-repeat="no-repeat" background-size="cover"
                 z-index="0">
             <div class="top-left">Urban<br>Heat Island
             </div>
@@ -380,7 +380,7 @@
                 </div>
                 <div class="map-item">
                     <h3>Urban Heat Island - Now</h3>
-                    <img src="//static/images/munich.png" alt="Urban Heat Island in Munich Now">
+                    <img src="/static/images/munich.png" alt="Urban Heat Island in Munich Now">
                 </div>
             </div>
         </section>
@@ -402,7 +402,7 @@
                     <p><strong>Outcome:</strong> The building’s cooling costs were reduced by 25%, saving €50,000
                         annually, while reducing the carbon footprint by 18%.</p>
                 </div>
-                <img src="../../images/MarienplatzSquareOldTownMunich.jpg">
+                <img src="/static/images/MarienplatzSquareOldTownMunich.jpg">
             </div>
         </div>
     </section>
@@ -412,7 +412,7 @@
     </section>
     <div class="container-project">
         <div class="project">
-            <img src="../../images/verdeTurin.jpg" alt="Project 1">
+            <img src="/static/images/verdeTurin.jpg" alt="Project 1">
             <div class="project-info">
                 <h2>Green Roofs and Walls</h2>
                 <p><i> Rome and Turin, Italy</i> </p>
@@ -426,7 +426,7 @@
             </div>
         </div>
         <div class="project">
-            <img src="../../images/coolparvementLA.jpg" alt="Cool Roofs and Cool Pavements Toolkit">
+            <img src="/static/images/coolparvementLA.jpg" alt="Cool Roofs and Cool Pavements Toolkit">
             <div class="project-info">
                 <h2>Cool Roofs and Cool Pavements Toolkit</h2>
                 <p><i> Los Angeles, USA</i></p>
@@ -439,7 +439,7 @@
             </div>
         </div>
         <div class="project">
-            <img src="../../images/japangreenroof.webp" alt="Cooling Potential of Green Roofs">
+            <img src="/static/images/japangreenroof.webp" alt="Cooling Potential of Green Roofs">
             <div class="project-info">
                 <h2>Cooling Potential of Green Roofs</h2>
                 <p><i>Many cities worldwide</i></p>
@@ -450,7 +450,7 @@
             </div>
         </div>
         <div class="project">
-            <img src="../../images/londonwhitebus.webp" alt="White Roofs Study">
+            <img src="/static/images/londonwhitebus.webp" alt="White Roofs Study">
             <div class="project-info">
                 <h2>White Roofs Study</h2>
                 <p><i>United Kingdom</i></p>
@@ -462,7 +462,7 @@
             </div>
         </div>
         <div class="project">
-            <img src="../../images/westmidland.jpg" alt="Cool Roofs and Heat-Related Mortality in the West Midlands">
+            <img src="/static/images/westmidland.jpg" alt="Cool Roofs and Heat-Related Mortality in the West Midlands">
             <div class="project-info">
                 <h2>Cool Roofs and Heat-Related Mortality in the West Midlands</h2>
                 <p><i> West Midlands, United Kingdom</i></p>
@@ -497,7 +497,7 @@
             <div class="image-container">
                 <a href="/map">
                     <h3 class="image-title">Discover Munich's Hotspots</h3>
-                    <img src="../../images/munichmap.png" alt="Explore the Map">
+                    <img src="/static/images/munichmap.png" alt="Explore the Map">
                 </a>
             </div>
         </section>
